Tue Feb 10 20:56:07 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_socket_creds): refactored to avoid
	  a rb_str_cat2 call.

Tue Feb 10 04:34:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (when): makes parentheses balanced.

Tue Feb 10 01:28:49 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ip_cmsg_type_to_sym): renamed from
	  cmsg_type_to_sym.

Tue Feb 10 01:22:56 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_inspect): refactored.

Tue Feb 10 01:02:16 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: generate intern_family_noprefix.

	* ext/socket/option.c (sockopt_inspect): use intern_family_noprefix
	  not to show AF_ prefix.

	* ext/socket/ancdata.c (ancillary_inspect): ditto.

Mon Feb  9 23:21:29 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/constants.c (level_arg): use unknown_level_to_int for
	  non internet protocol.
	  (optname_arg): use only so_optname_to_int for non internet protocol.
	  (cmsg_type_arg): use only scm_optname_to_int for non internet
	  protocol.

	* ext/socket/mkconstants.rb: generate unknown_level_to_int.
	  rename iplevel_to_int to ip_level_to_int.

Mon Feb  9 23:04:27 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: rename level_to_int to iplevel_to_int.
	  rename intern_level to intern_iplevel.

	* ext/socket/constants.c: follow the renaming.

	* ext/socket/option.c: ditto.

	* ext/socket/ancdata.c: ditto.

Mon Feb  9 22:52:13 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/rubysocket.h (level_arg): add family argument.
	  (optname_arg): ditto.
	  (cmsg_type_arg): ditto.
	  (rb_sock_getfamily): declared.

	* ext/socket/constants.c (level_arg): add family argument.
	  (optname_arg): ditto.
	  (cmsg_type_arg): ditto.

	* ext/socket/init.c (rb_sock_getfamily): defined.

	* ext/socket/option.c (sockopt_initialize): give family for level_arg
	  and optname_arg.
	  (sockopt_s_int): ditto.
